# llm_project

./: pyproject.toml  tetris_log.txt
src/Diffusion/: stableDiffusion.ipynb
src/Transformer/.ipynb_checkpoints/: transformer-checkpoint.ipynb
src/openai/: chat_completion_api.ipynb  gradio.ipynb
src/openai/API/: Embeddings.ipynb  Fine-tuning.ipynb  Function_calling.ipynb  audio.ipynb  chat.ipynb
src/openai/Applications/: QA_via_embedding_search.ipynb
src/openai/Applications/Assistant - Examples/: Assistant_data_visualization.ipynb  Assistant_quickstart.ipynb
src/openai/Applications/Assistant - Examples/.ipynb_checkpoints/: Assistant_create_slides-checkpoint.ipynb
src/openai/Applications/Assistant_Examples/: Assistant_Resume_analysis.ipynb  Assistant_create_slides.ipynb  Assistant_data_visualization.ipynb  Assistant_quickstart.ipynb
src/openai/Applications/Assistant_Examples/.ipynb_checkpoints/: Assistant_create_slides-checkpoint.ipynb
src/openai/Models capabilities/: text_generation.ipynb
src/utilis/: consistent_output.ipynb  count_token.ipynb
