[tool.poetry]
name = "llm-env"
version = "0.1.0"
description = ""
authors = ["Tianyu Liu <tyliu1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.1"
huggingface = "^0.0.1"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pygame = "^2.5.2"
notebook = "^7.2.2"
gradio = "^4.44.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
